--- a/app.json
+++ b/app.json
@@ -1,11 +1,11 @@
 {
   "expo": {
-    "name": "TrialMatch",
-    "slug": "TrialMatch",
+    "name": "Trialfe",
+    "slug": "Trialfe",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "trialmatch",
+    "scheme": "trialfe",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
